--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME PAGE</title>
-    <link rel="stylesheet" href="stylesheet.css"> 
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header class="div">
-        <div id="navbar">
-            <a href="#" id="logo"  >RscCloudEducation  </a>
-            <a href="#" >student login   </a>
-            <a href="#" >Alumini login  </a>
-            <a href="#" >Admin login  </a>
-            <a href="#" >Sign In </a>
-            <a href="#" >Sign Up </a>
-           
-        </div>
-
-    </header>
-
-    <main>
-        <div class="slogan-container">
-            <h1 class="slogan">Connecting Edicaton Beyond</h1>
-            <h1 class="slogan">Boundaries For Rsc Students</h1>
+    <div class="container">
+        <div class="navbar">
+            <a href="#" id="logo">RscCloudEducation </a>
+            <div class="navbar-links">
+                <a href="#">Student login </a>
+                <a href="#">Alumini login </a>
+                <a href="#">Admin login </a>
+                <a href="#">Sign In </a>
+                <a href="#">Sign Up </a>
             </div>
-            <br>
-
-        <div id="information">
-        <h3>
-            INTRODUCTION
-        </h3>
-        <P id="information2"> Experience The Student Who Passout Degree from Rajashri Shahu Maharaj College In Sion. Those Student Shareing Their Experience In The Job,Their Postions ,Their work related Experiences.That help those videos to build students Confidence in this college to do more focus to study and give the goal to study.And This Platform They also can learn  free courses online at any time for education purpose only Available 'RSCCloudEducation'for the students</P>
-      </div>
-    </main>
-
-    <footer>
-        <h3>About</h3>
-        <h3>Contact Me</h3>
-
-    </footer>
+        </div>
+        <div class="main-container">
+            <div class="slogan-container">
+                <h1 class="slogan">Connecting Edicaton Beyond Boundaries For Rsc Students</h1>
+            </div>
+            <div class="section" id="one">
+                <div class="Intro">
+                    <h3> INTRODUCTION </h3>
+                </div>
+                <P class="content"> Experience The Student Who Passout Degree from Rajashri Shahu Maharaj College In
+                    Sion. Those Student Shareing Their Experience In The Job ,Their Postions Their work related
+                    Experiences.That help those videos to build students Confidence in this college to do more focus to
+                    study and give the goal to study.And This Platform They also can learn free courses online at any
+                    time for education purpose only Available 'RSCCloudEducation'for the students</P>
+                <div class="content" id="two">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt id omnis accusantium? Eum amet
+                    nisi
+                    asperiores non delectus voluptatum vitae laboriosam voluptate dignissimos neque, autem, maiores illo
+                    eos
+                    dolore numquam.
+                </div>
+            </div>
+        </div>
+        <div class="Trust-container">
+            <h3>Trusted By 100+ Students</h3>
+        </div>
+        <div class="footer-Container">
+            <div class="About-container">
+                <div class="random-image">
+                    <img src="assets/About.png" alt="NoImg" id="about-img" />
+                </div>
+                <div class="About-info">
+                    <h3>About Us</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eaque deserunt saepe autem
+                        numquam, voluptas atque aliquid itaque in, error vitae earum sit corporis eligendi.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
