hompage is created

--- a/frontend/homepage/homepage.html
+++ b/frontend/homepage/homepage.html
@@ -52,7 +52,7 @@
         <div class="footer-Container">
             <div class="About-container">
                 <div class="random-image">
-                    <img src="assets/About.png" alt="NoImg" id="about-img" />
+                    <img src="student.png" alt="NoImg" id="about-img" />
                 </div>
                 <div class="About-info">
                     <h3>About Us</h3>
