authantication page design is created

--- a/frontend/homepage/homepage.html
+++ b/frontend/homepage/homepage.html
@@ -15,9 +15,9 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <a href="#" id="logo">RscCloudEducation </a>
+            <a href="homepage.html" id="logo">RscCloudEducation </a>
             <div class="navbar-links">
-                <a href="#">Student login </a>
+                <a href="./authantication/student_login.html  ">Student login </a>
                 <a href="#">Alumini login </a>
                 <a href="#">Admin login </a>
                 <a href="#">Sign In </a>
@@ -26,7 +26,7 @@
         </div>
         <div class="main-container">
             <div class="slogan-container">
-                <h1 class="slogan">Connecting Edicaton Beyond Boundaries For Rsc Students</h1>
+                <h1 class="slogan">Connecting Education Beyond Boundaries For Rsc Students</h1>
             </div>
             <div class="section" id="one">
                 <div class="Intro">
