--- a/frontend/homepage/authantication/Dashboard/Dashboard.html
+++ b/frontend/homepage/authantication/Dashboard/Dashboard.html
@@ -12,18 +12,57 @@
 </head>
 
 <body>
-    <div class="nav-sidebar_container">
-        <div class="nav">
-            <div class="wrapper">
+    <div class="container">
+        <div class="nav-sidebar_container">
+            <div class="nav">
                 <a href="#logo" id="logo">RscCloudEducation</a>
                 <a href="#myprofile">My Profile</a>
                 <a href="#mycourses">My Courses</a>
                 <a href="#aluminivideos">Alumini Videos</a>
                 <a href="#logout">Log Out</a>
+
             </div>
         </div>
-        <div class="main-container"></div>
+
+
+        <div class="main-container">
+
+            <div class="intro-profile">
+                <div class="about_welcome">
+                    <h1 id="welcome">Welcome</h1>
+                    <i><img src="user.png" alt="NoImg" id="about-img" />
+                        <h2>Hanumant Silmavala</h2>
+                    </i>
+                </div>
+            </div>
+
+            <div class="search">
+                <nav class="search_engine"><input type="text" placeholder="Search.."></nav>
+            </div>
+
+            <div class="video_tab-container">
+                <div class="mycourse_tab">
+                    <nav id="mycourse">
+                        <a href="#">My Courses</a>
+                    </nav>
+
+                    <div class="student_videos">
+                        <video width="320" height="240" controls>
+                            <source src="../assets/html full course.mp4" type="video/mp4">
+                            <source src="html full course.ogg" type="video/ogg">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+        </div>
     </div>
+
 
 </body>
 
