--- a/frontend/homepage/homepage.html
+++ b/frontend/homepage/homepage.html
@@ -38,11 +38,8 @@
                     study and give the goal to study.And This Platform They also can learn free courses online at any
                     time for education purpose only Available 'RSCCloudEducation'for the students</P>
                 <div class="content" id="two">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt id omnis accusantium? Eum amet
-                    nisi
-                    asperiores non delectus voluptatum vitae laboriosam voluptate dignissimos neque, autem, maiores illo
-                    eos
-                    dolore numquam.
+                    It changes lifes of students to view the IT industry jobs in current time to acheive greater hights
+                    and make better understanding of outside life and prepare for your goal to acheive IT jobs easily.
                 </div>
             </div>
         </div>
@@ -56,8 +53,8 @@
                 </div>
                 <div class="About-info">
                     <h3>About Us</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eaque deserunt saepe autem
-                        numquam, voluptas atque aliquid itaque in, error vitae earum sit corporis eligendi.</p>
+                    <p>My Name is hanumanta. I am BSC IT graduate from Rajashri Shahu Maharaj college arts & Science
+                        from Mumbai University. My Email adress: jagtapn809@gmail.com .</p>
                 </div>
             </div>
         </div>
